--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "moviedb",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://clucian.github.io/movie-db",
   "dependencies": {
-    "lodash": "^4.17.11", 
+    "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -13,9 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "deploy": "npm run build && gh-pages -d build",
     "eject": "react-scripts eject",
     "compile:sass": "node-sass src/sass/main.scss src/css/style.css"
-
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
